# wheel-trading-bot

./: .dockerignore  .env.example  .gitignore  CHANGES.md  CONTRIBUTING.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
backend/: config.py  database.py  logging_config.py  main.py  main_scan.py  requirements.txt  scanner.py  schemas.py  sp500_exclude.txt  sp500_symbols.txt
backend/application/: position_service.py  scan_service.py
backend/domain/: position.py
backend/infrastructure/: scan_runner.py
backend/tests/: test_api.py  test_assigned_calls.py  test_positions.py  test_scanner.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.jsx  App.tsx  WheelBotPage.tsx  index.css  main.tsx  types.ts  wheelbot.css
frontend/src/__tests__/: CallConfirmModal.test.tsx  CloseCallModal.test.tsx  ClosedCyclesList.test.tsx  WheelBotPage.test.tsx
frontend/src/components/: CallConfirmModal.tsx  CloseCallModal.tsx  ClosedCyclesList.tsx
frontend/src/test/: setup.ts
